--- a/.github/workflows/daily.yml
+++ b/.github/workflows/daily.yml
@@ -2,8 +2,8 @@ name: Daily Article
 
 on:
   schedule:
-    - cron: "0 6 * * *" # 06:00 UTC = 08:00 Paris
-  workflow_dispatch: {}
+    - cron: "0 6 * * *"   # 06:00 UTC = 08:00 Paris
+  workflow_dispatch: {}    # <- permet le Run manuel
 
 permissions:
   contents: write
@@ -19,6 +19,12 @@ jobs:
         uses: actions/setup-python@v5
         with:
           python-version: "3.11"
+
+      - name: Debug tree
+        run: |
+          pwd
+          ls -la
+          find . -maxdepth 3 -type f | sort
 
       - name: Run generator
         run: |
