--- a/.github/workflows/daily.yml
+++ b/.github/workflows/daily.yml
@@ -30,9 +30,24 @@ jobs:
         run: |
           python3 scripts/generate_article.py
 
+      - name: Debug changes
+        run: |
+          echo "=== git status ==="
+          git status
+          echo "=== diff index.html (head) ==="
+          git --no-pager diff -- index.html | sed -n '1,120p' || true
+          echo "=== tail index.html ==="
+          tail -n 5 index.html || true
+          echo "=== ls -la (racine) ==="
+          ls -la
+
       - name: Commit & push if changed
         run: |
           git config user.name "github-actions[bot]"
           git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
-          git add .
-          git diff --quiet && echo "No changes" || (git commit -m "Daily article update" && git push)
+          git add index.html article_exemple.html
+          git diff --cached --quiet && echo "No changes" || (git commit -m "Daily: inject card + timestamp" && git push)
+
+         
+
+   
