--- a/.github/workflows/daily.yml
+++ b/.github/workflows/daily.yml
@@ -3,7 +3,7 @@ name: Daily Article
 on:
   schedule:
     - cron: "0 6 * * *"   # 06:00 UTC = 08:00 Paris
-  workflow_dispatch: {}    # Permet le lancement manuel
+  workflow_dispatch: {}    # <- permet un Run manuel
 
 permissions:
   contents: write
@@ -20,23 +20,28 @@ jobs:
         with:
           python-version: "3.11"
 
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install "openai>=1.40.0,<2"
+
       - name: Debug tree (avant génération)
         run: |
-          echo "=== Structure avant génération ==="
           pwd
           ls -la
           find . -maxdepth 3 -type f | sort
 
       - name: Run generator
+        env:
+          OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
         run: |
           python3 scripts/generate_article.py
 
       - name: Verify generated files
         run: |
-          echo "=== Articles générés ==="
-          ls -la articles || true
-          echo "=== Images générées ==="
-          ls -la images || true
+          echo "=== Vérification existence fichiers ==="
+          ls -l article_*.html || true
+          grep -q "<h1" index.html && echo "Index contient un titre"
 
       - name: Debug changes
         run: |
@@ -46,10 +51,12 @@ jobs:
           git --no-pager diff -- index.html | sed -n '1,120p' || true
           echo "=== tail index.html ==="
           tail -n 5 index.html || true
+          echo "=== ls -la (racine) ==="
+          ls -la
 
       - name: Commit & push if changed
         run: |
           git config user.name "github-actions[bot]"
           git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
-          git add -A
-          git diff --cached --quiet && echo "No changes" || (git commit -m "Daily: publish article + update index" && git push)
+          git add index.html article_*.html images/
+          git diff --cached --quiet && echo "No changes" || (git commit -m "Daily: new article + index update" && git push)
