--- a/.github/workflows/daily.yml
+++ b/.github/workflows/daily.yml
@@ -23,7 +23,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install "openai>=1.40.0,<2"
+          pip install "openai>=1.40.0,<2" requests beautifulsoup4
 
       - name: Debug tree (avant génération)
         run: |
